# struct_converter

./: .coverage  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  __init__.py  c_parser.py  cache_manager.py  code_generator.py  converter_cli.py  data_parser.py  logger_config.py  pyproject.toml  pytest.ini  result_simple.json  setup.py  struct_converter.c  struct_converter.h  test_fix.py  test_structs.h  test_structs.json  test_tree_sitter.py  test_type_parser.py  tox.ini  type_parser.py  utils.py
c_parser/: __init__.py  data_parser.py  type_parser.py
config/: encryption.yaml  generator.yaml  logging.yaml  tree_sitter.yaml
docs/api/: README.md
legacy/: converter_cli.py
legacy/c_parser/: __init__.py  data_parser.py  type_manager.py  type_parser.py
legacy/src/struct_converter/: code_generator.py
legacy/src/utils/: logger_config.py
legacy/struct_converter/: cache.py  code_generator.py  config.py  data_generator.py  formatter.py  type_helper.py
legacy/struct_converter/generator/: base.py  struct.py
legacy/struct_converter/templates/: header.h.tmpl  source.c.tmpl
legacy/utils/: __init__.py  cache_manager.py  logger_config.py  tree_sitter_util.py
legacy/utils/formatters/: file_writer.py  output_formatter.py
output/: struct_converter.c  struct_converter.h  test_fix_result.json
scripts/: build.sh  publish.sh  setup_dev.sh
src/: cli.py
src/c_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/c_converter/core/: config_validator.py  encryption_config.py  field_validator.py  validator.py
src/c_converter/generators/: __init__.py  c_generator.py  cpp_generator.py  python_generator.py  template_renderer.py
src/c_converter/templates/c/: header.h.jinja
src/c_parser/: __init__.py  base_parser.py  data_parser.py  expression_parser.py  tree_sitter_parser.py  type_manager.py  type_parser.py  value_parser.py
src/c_parser/core/: __init__.py  data_manager.py  expression_parser.py  tree_sitter_utils.py  type_manager.py  value_parser.py
src/config/: __init__.py  base_config.py  encryption_config.py  generator_config.py  loader.py  logging_config.py  parser_config.py  tree_sitter_config.py
src/struct_converter/: cli.py
src/struct_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/struct_converter/core/: __init__.py  config.py  encryption_config.py  exceptions.py  field_encryptor.py  field_validator.py  generator.py  json_parser.py  optimizer.py  template_manager.py  type_converter.py
src/struct_converter/generators/: base_generator.py  c_generator.py  cpp_generator.py  python_generator.py
src/struct_converter/templates/c/: source.c.jinja
src/struct_converter/templates/python/: structs.py.jinja
src/utils/: __init__.py  cache.py  cache_manager.py  code_formatter.py  decorators.py  logger.py  logging.py  memory_logger.py  profiler.py  tree_sitter_util.py
struct_converter/: code_generator.py
tests/: README.md  conftest.py  example_usage.md  pytest.ini  run_tests.py  run_tests_uv.py  test_data.c  test_data_manager.py  test_data_parser.py  test_encryption_config.py  test_error_handling.py  test_expression_parser.py  test_field_encryption.py  test_field_validator.py  test_tree_sitter_utils.py  test_type_manager.py  test_type_parser.py
tests/fixtures/c_files/: test_data.c  test_structs.h
tests/fixtures/expected/: test_structs.py
tests/integration/: test_cli.py  test_complex_features.py  test_edge_cases.py  test_error_handling.py  test_full_conversion.py  test_generator.py  test_generator_integration.py
tests/test_cli/: test_cli.py
tests/test_core/: test_config.py  test_type_converter.py
tests/test_data/: basic_types.h  complex_types.h
tests/test_generators/: test_c_generator.py
tests/test_integration/: test_complex_types.py  test_conversion_flow.py  test_edge_cases.py  test_encryption_integration.py  test_field_encryption.py  test_generator_integration.py
tests/test_performance/: test_field_encryption_performance.py  test_generator_performance.py
tests/test_templates/: test_template_rendering.py
tests/unit/: conftest.py
tests/unit/c_parser/: test_data_parser.py  test_type_parser.py
tests/unit/c_parser/core/: test_tree_sitter_base.py  test_type_manager.py  test_value_parser.py
tests/unit/struct_converter/: test_base_generator.py  test_c_generator.py  test_cli.py  test_edge_cases.py
tests/unit/utils/: test_logger.py
utils/: cache_manager.py  tree_sitter_util.py
utils/formatters/: output_formatter.py
